--- a/app/views/party/parties/_form.html.erb
+++ b/app/views/party/parties/_form.html.erb
@@ -117,6 +117,15 @@
           <%= render "party/parties/address_fields", f: af, address_types: @address_types, countries: @countries %>
         <% end %>
       <% end %>
+        <div class="col-span-2 text-right">
+          <% if f.object.persisted? %>
+            <%= f.check_box :_destroy %>
+            <%= f.label :_destroy, "Remove", class: "text-sm" %>
+          <% else %>
+            <button type="button" class="btn btn-ghost btn-sm" data-action="nested-form#remove">Remove</button>
+          <% end %>
+        </div>
+      </div>
     </div>
   </div>
 
